tests/error/u8_binary_literal_out_of_range.vow
// TEST: error-code LiteralOutOfRange
// TEST: stderr "literal 300 does not fit in u8"
module U8BinaryLiteralOutOfRange

fn main() -> i32 {
    let byte: u8 = 1;
    let invalid: u8 = byte + 300;
    0
}
